[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Menu/SettingsMenu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menu/SettingsMenu/settingsMenu_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/pageTitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/pageName.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/pageBtn.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_green_mid.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_yellow_mid.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Menu/barHorizontal_blue_mid.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.24487
margin_top = -4.48987
margin_right = 2.24487
margin_bottom = -4.48987
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -207.0
margin_top = 5.0
rect_min_size = Vector2( 414, 736 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 5.0
margin_right = -26.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuText" type="Panel" parent="NinePatchRect/VBoxContainer"]
margin_right = 380.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
custom_styles/panel = SubResource( 1 )

[node name="menuName" type="Label" parent="NinePatchRect/VBoxContainer/MenuText"]
margin_top = 4.0
margin_right = 350.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
text = "Game Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="NinePatchRect/VBoxContainer/MenuText"]
margin_top = 40.0
margin_right = 350.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundGame" type="Panel" parent="NinePatchRect/VBoxContainer"]
margin_top = 94.0
margin_right = 380.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 70 )
custom_styles/panel = SubResource( 2 )

[node name="VolumeLable" type="Label" parent="NinePatchRect/VBoxContainer/SoundGame"]
margin_left = 10.0
margin_top = 4.0
margin_right = 730.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeGame" type="SpinBox" parent="NinePatchRect/VBoxContainer/SoundGame"]
margin_left = 10.0
margin_top = 35.0
margin_right = 74.0
margin_bottom = 59.0
size_flags_horizontal = 2
step = 5.0
value = 50.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundMusic" type="Panel" parent="NinePatchRect/VBoxContainer"]
margin_top = 168.0
margin_right = 380.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 70 )
custom_styles/panel = SubResource( 2 )

[node name="VolumeLable" type="Label" parent="NinePatchRect/VBoxContainer/SoundMusic"]
margin_left = 10.0
margin_top = 4.0
margin_right = 730.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeMusic" type="SpinBox" parent="NinePatchRect/VBoxContainer/SoundMusic"]
margin_left = 10.0
margin_top = 35.0
margin_right = 74.0
margin_bottom = 59.0
size_flags_horizontal = 2
step = 5.0
value = 50.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grpahics" type="Panel" parent="NinePatchRect/VBoxContainer"]
margin_top = 242.0
margin_right = 380.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 70 )
custom_styles/panel = SubResource( 3 )

[node name="fullScreen" type="Label" parent="NinePatchRect/VBoxContainer/Grpahics"]
margin_left = 10.0
margin_top = 4.0
margin_right = 730.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="NinePatchRect/VBoxContainer/Grpahics"]
margin_left = 10.0
margin_top = 35.0
margin_right = 76.0
margin_bottom = 75.0
size_flags_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 316.0
margin_right = 380.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 20.0
margin_top = 620.0
margin_right = 380.0
margin_bottom = 675.0
rect_min_size = Vector2( 0, 55 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
expand = true

[node name="backLabel" type="Label" parent="NinePatchRect/VBoxContainer/backBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="NinePatchRect/VBoxContainer/SoundGame/VolumeGame" to="." method="_on_VolumeGame_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/SoundMusic/VolumeMusic" to="." method="_on_VolumeMusic_value_changed"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/Grpahics/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/backBtn" to="." method="_on_backBtn_pressed"]
